--- a/_css/sus-style.css
+++ b/_css/sus-style.css
@@ -197,6 +197,9 @@ h2 {
 
 
 @media screen and (max-width: 1000px) {
+    .response {
+        width: 100%;
+    }
     .web-title {
         display: none;
     }
