--- a/_css/sus-style.css
+++ b/_css/sus-style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Avenir Next', Arial, sans-serif;
     font-weight: 400;
     background-image: none;
 }
@@ -26,7 +26,9 @@ hr {
     width: 100%;
     text-align: center;
     padding: 100px 0 150px 0;
-    background: #32537F;
+    background-image: url("/hero-image.jpg");
+    background-attachment: fixed;
+    background-size: cover;
     color: #ffffff;
 }
 h2 {
@@ -37,7 +39,7 @@ h2 {
     background-color: #ffffff;
     position: relative;
     top: -100px;
-    border-top: 6px solid #177AFF;
+    border-top: 6px solid #008b8b;
     display: block;
     max-width: 50%;
     margin: 0 auto;
@@ -52,9 +54,9 @@ h2 {
 #btn-calc {
     -webkit-appearance: none;
     appearance: none;
-    color: #32537F;
+    color: #008b8b;
     background-color: #ffffff;
-    border: 2px solid #32537F;
+    border: 2px solid #008b8b;
     border-radius: 50px;
     padding: 15px 25px;
     font-size: 15px;
@@ -63,14 +65,14 @@ h2 {
 }
 #btn-calc:hover, #btn-calc:focus {
     color: #ffffff;
-    background-color: #32537F;
+    background-color: #008b8b;
 }
 #btn-calc:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
 #btn-calc:disabled:hover {
-    color: #32537F;
+    color: #008b8b;
     background-color: #ffffff;
 }
 #btn-reset {
@@ -110,7 +112,7 @@ h2 {
     background-color: #ffffff;
     margin: 30vh auto;
     padding: 20px;
-    border-bottom: 5px solid #32537F;
+    border-bottom: 5px solid #008b8b;
     width: 50%;
 }
 .close {
@@ -125,7 +127,7 @@ h2 {
 .close:hover, .close:focus {
     text-decoration: none;
     cursor: pointer;
-    border: 2px solid black;
+    border: 2px solid #000000;
 }
 .modal-center {
     margin-top: 50px;
@@ -173,12 +175,12 @@ h2 {
     left: 3px;
     height: 20px;
     width: 20px;
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 50%;
-    border: 2px solid gray;
+    border: 2px solid #808080;
 }
 .container input:checked ~ .checkmark {
-    border: 2px solid #32537F;
+    border: 2px solid #008b8b;
 }
 .checkmark:after {
     content: "";
@@ -187,12 +189,20 @@ h2 {
     width: 14px;
     height: 14px;
     border-radius: 50%;
-    background: #32537F;
+    background: #008b8b;
     position: absolute;
     display: none;
 }
 .container input:checked ~ .checkmark:after {
     display: block;
+}
+.mob-center {
+    text-align: center;
+}
+
+/* Footer area */
+a {
+    color:  #008b8b;
 }
 
 
@@ -243,7 +253,7 @@ h2 {
         left: 5px;
         height: 16px;
         width: 16px;
-        border: 2px solid gray;
+        border: 2px solid #808080;
     }
     .checkmark:after {
         top: 2px;
